--- a/Post-Template.css
+++ b/Post-Template.css
@@ -12,28 +12,20 @@
   padding: 30px;
 }
 
+.u-section-1 .u-text-1 {
+  margin: 0;
+}
+
 .u-section-1 .u-image-1 {
   height: 486px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-}
-
-.u-section-1 .u-text-1 {
   margin-top: 20px;
-  margin-bottom: 0;
-  margin-left: 0;
-}
-
-.u-section-1 .u-metadata-1 {
-  margin-top: 30px;
   margin-bottom: 0;
   margin-left: 0;
 }
 
 .u-section-1 .u-text-2 {
   margin-bottom: 0;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 0;
 }
 
